# OneNER

./: .gitignore  Dockerfile  README.md  pyproject.toml
examples/: train.sh  train_crf.sh
onener/transformer/: auto_model.py  ner.py  pipeline.py  pretokenizer.py  tasks.py  train.py  utils.py
onener/transformer/models/: baseline_ner.py  crf_ner.py  mlp_ner.py  utils.py
onener/transformer/models/layers/: crf.py  mlp.py
tests/: test_onener.py
